Fix uri_string() return value.

--- a/libraries/uri.html
+++ b/libraries/uri.html
@@ -180,7 +180,7 @@ $str = $this->uri->assoc_to_uri($array);<br />
 
 <p>此函數將回傳:</p>
 
-<code>/news/local/345</code>
+<code>news/local/345</code>
 
 
 <h2>$this->uri->ruri_string()</h2>
