--- a/changelog.html
+++ b/changelog.html
@@ -57,6 +57,29 @@
 
 <h1>版本紀錄</h1>
 
+<a name="2.2.0"></a>
+<h2>版本 2.2.0</h2>
+<p>發佈日期: June 5, 2014</p>
+
+<ul>
+    <li>一般變更
+        <ul>
+            <li><b>安全性:</b> The <samp>xor_encode()</samp> method in the Encrypt Class has been removed. The Encrypt Class now requires the Mcrypt extension to be installed.</li>
+            <li><b>安全性:</b> The <a href="libraries/sessions.html">Session Library</a> now uses HMAC authentication instead of a simple MD5 checksum.</li>
+        </ul>
+    </li>
+</ul>
+
+<h3>2.2.0 修正項目</h3>
+<ul>
+    <li>Fixed an edge case (#2583) in the <a href="libraries/email.html">Email Library</a> where <a href="http://www.hardened-php.net/suhosin/">Suhosin</a> blocked messages sent via <samp>mail()</samp> due to trailing newspaces in headers.</li>
+    <li>Fixed a bug (#696) - make <samp>oci_execute()</samp> calls inside <samp>num_rows()</samp> non-committing, since they are only there to reset which row is next in line for oci_fetch calls and thus don't need to be committed.</li>
+    <li>Fixed a bug (#2689) - <a href="database/forge.html">Database Forge Class</a> methods <samp>create_table()</samp>, <samp>drop_table()</samp> and <samp>rename_table()</samp> produced broken SQL for tge 'sqlsrv' driver.</li>
+    <li>Fixed a bug (#2427) - PDO <a href="database/index.html">Database driver</a> didn't properly check for query failures.</li>
+    <li>Fixed a bug in the <a href="libraries/sessions.html">Session Library</a> where authentication was not performed for encrypted cookies.</li>
+</ul>
+
+<a name="2.1.4"></a>
 <h2>版本 2.1.4</h2>
 <p>發佈日期: July 8, 2013</p>
 
