add upgration guide for 2.2.0
Signed-off-by: Bo-Yi Wu <appleboy.tw@gmail.com>

--- a/installation/upgrade_220.html
+++ b/installation/upgrade_220.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>從 2.1.3 升級到 2.1.4 : CodeIgniter 使用手冊</title>
+<title>從 2.1.4 升級到 2.2.0 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -42,7 +42,7 @@
 <td id="breadcrumb">
 <a href="http://codeigniter.com/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-從 2.1.3 升級到 2.1.4
+從 2.1.4 升級到 2.2.0
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="www.codeigniter.org.tw/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -55,7 +55,9 @@
 <!-- START CONTENT -->
 <div id="content">
 
-<h1>從 2.1.3 升級到 2.1.4</h1>
+<h1>從 2.1.4 升級到 2.2.0</h1>
+
+<p class="important"><strong>Note:</strong> The Encryption Class now requires the Mcrypt extension. If you were previously using the Encrypt Class without Mcrypt this is a breaking change, you must install the Mcrypt extension in order to upgrade. For information on installing Mcrypt please see the PHP <a href="http://php.net/manual/en/mcrypt.setup.php">documentation</a>.</p>
 
 <p>在執行升級之前，你可以透過更換 index.php 為靜態檔案，將網站導向此靜態網頁。</p>
 
