update upgrading doc.
Signed-off-by: Bo-Yi Wu <appleboy.tw@gmail.com>

--- a/installation/upgrading.html
+++ b/installation/upgrading.html
@@ -60,6 +60,7 @@
 <p>請依您的版本詳閱更新注意事項。.</p>
 
 <ul>
+    <li><a href="upgrade_220.html">升級版本 2.1.4 到 2.2.0</a></li>
     <li><a href="upgrade_214.html">升級版本 2.1.3 到 2.1.4</a></li>
     <li><a href="upgrade_213.html">升級版本 2.1.2 到 2.1.3</a></li>
     <li><a href="upgrade_212.html">升級版本 2.1.1 到 2.1.2</a></li>
