--- a/general/profiling.html
+++ b/general/profiling.html
@@ -67,12 +67,12 @@ Application 效能分析
 
 <h2>啟動效能分析器</h2>
 
-<p>可在 <a href="controllers.html">控制器(Controller)</a> 函數中，啟動效能分析器:</p>
+<p>在 <a href="controllers.html">控制器(Controller)</a> 函數中，啟動效能分析器:</p>
 <code>$this->output->enable_profiler(TRUE);</code>
 
-<p>當啟動之後，效能結果就會被產生出來，然後塞進也面尾端。</p>
+<p>啟動之後，效能結果就會被產生出來放入頁面尾端。</p>
 
-<p>關閉效能分系器的方式:</p>
+<p>關閉效能分析器的方式:</p>
 <code>$this->output->enable_profiler(FALSE);</code>
 
 <h2>設定 Benchmark 點</h2>
