--- a/general/caching.html
+++ b/general/caching.html
@@ -65,7 +65,7 @@
 
 <h2>快取是如何運作的呢?</h2>
 
-<p>快取可以把單頁為最小單位，你可以設定頁面的保留時間、何時該被從新更新(refresh)。當葉面首次被載入時，快取檔案則會寫 <dfn>applocation/cache</dfn> 目錄之中。下個頁面則由快取檔案取出，接者把這個頁面傳送給對伺服器送出請求(request)的瀏覽器。假如請求的檔案已經過期(expired)，那麼舊的快取頁面則會被刪除，然後伺服器更新快取後，才會把頁面傳送給瀏覽器。</p>
+<p>快取可以把單頁為最小單位，你可以設定頁面的保留時間、何時該被從新更新(refresh)。當頁面首次載入時，快取檔案則會寫 <dfn>applocation/cache</dfn> 目錄之中。下個頁面則由快取檔案取出，接者把這個頁面傳送給對伺服器送出請求(request)的瀏覽器。假如請求的檔案已經過期(expired)，那麼舊的快取頁面則會被刪除，然後伺服器更新快取後，才會把頁面傳送給瀏覽器。</p>
 
 <p>注意: Benchmark tag 並沒有被快取下來，所以當快取功能啟動的時候，你還是可以看到頁面載入的速度。</p>
 
@@ -85,7 +85,7 @@
 
 <h2>刪除快取</h2>
 
-<p>如果你不再需要快取某些檔案，你可以移除快取 tag，這樣在快取檔過期之後就不會再被更新了。注意: 移除 tag 之後，快取不會被直接移除，他還是會被保留下來，原先設定的時間到逾期為止。如果要快點刪除這個快取的話，你得到快取目錄去刪除調它。</p>
+<p>如果你不再需要快取某些檔案，你可以移除快取 tag，這樣在快取檔過期之後就不會再被更新了。注意: 移除 tag 之後，快取不會被直接移除，他還是會被保留下來，原先設定的時間到逾期為止。如果要提前刪除快取的話，必須到快取目錄刪除它。</p>
 
 
 </div>
