--- a/installation/upgrade_220.html
+++ b/installation/upgrade_220.html
@@ -57,7 +57,7 @@
 
 <h1>從 2.1.4 升級到 2.2.0</h1>
 
-<p class="important"><strong>Note:</strong> The Encryption Class now requires the Mcrypt extension. If you were previously using the Encrypt Class without Mcrypt this is a breaking change, you must install the Mcrypt extension in order to upgrade. For information on installing Mcrypt please see the PHP <a href="http://php.net/manual/en/mcrypt.setup.php">documentation</a>.</p>
+<p class="important"><strong>注意:</strong> The Encryption Class now requires the Mcrypt extension. If you were previously using the Encrypt Class without Mcrypt this is a breaking change, you must install the Mcrypt extension in order to upgrade. For information on installing Mcrypt please see the PHP <a href="http://php.net/manual/en/mcrypt.setup.php">documentation</a>.</p>
 
 <p>在執行升級之前，你可以透過更換 index.php 為靜態檔案，將網站導向此靜態網頁。</p>
 
