--- a/general/caching.html
+++ b/general/caching.html
@@ -85,7 +85,7 @@
 
 <h2>刪除快取</h2>
 
-<p>如果你不再需要快取某些檔案，你可以移除快取 tag，這樣在快取檔過期之後就不會再被更新了。注意: 移除 tag 之後，快取不會被直接移除，他還是會被保留下來，原先設定的時間到逾期為止。如果要提前刪除快取的話，必須到快取目錄刪除它。</p>
+<p>如果不再需要某些快取檔案，你可以移除快取 tag，這樣在快取檔過期之後就不會再被更新了。注意: 移除 tag 之後，快取不會被直接移除，還是會被保留下來到原先設定的時間到逾期為止。如果要提前刪除快取資料，則必須到快取目錄刪除。</p>
 
 
 </div>
