--- a/overview/at_a_glance.html
+++ b/overview/at_a_glance.html
@@ -66,7 +66,7 @@
 <p>CodeIgniter 採用 Apache/BSD-style open source license 授權，所以你可以隨心所欲使用。詳細的授權內容請閱讀 <a href="../license.html">許可協議</a>。</p>
 
 <h2>CodeIgniter 很輕盈</h2>
-<p>真的非常輕盈。核心系統只需要少量的程式庫，比較啟需要很多資源的 framework 是很明顯的對比。不過額外的程式庫，還是可以依造需求動態的載入近來、所以基本系統是相當精簡且快速。
+<p>真的非常輕盈。核心系統只需要少量的程式庫，比較起需要很多資源的 framework 是很明顯的對比。不過額外的程式庫，還是可以依照需求動態的載入進來、所以基本系統是相當精簡且快速。
 </p>
 
 <h2>CodeIgniter 很快</h2>
