--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -74,7 +74,7 @@
 <p>整篇教學被分為數個部份進行，每一部份解釋 CodeIgniter 框架的一小部份功能。祥列如下：</p>
 <ul>
 <li>簡介，也就是目前這一頁，給你一些概念讓你知道接下來會做些什麼。</li>
-<li><a href="static_pages.html">靜態頁面</a>，將會教你關於控制器（Controller），檢視（View)與路由的基礎知識。</li>
+<li><a href="static_pages.html">靜態頁面</a>，將會教你關於控制器（Controller），檢視（View）與路由的基礎知識。</li>
 <li><a href="news_section.html">新聞模組</a>，這邊你將開始使用模型（Model），並且進行一些簡單的資料庫操作。</li>
 <li><a href="create_news_items.html">新增新聞項目</a>，將會進行更進階的資料庫操作以及表單驗證。</li>
 <li><a href="conclusion.html">結論</a>，將會指引你一些未來的學習方向以及其它資源。</li>
