fixed tutorial route rule

--- a/tutorial/create_news_items.html
+++ b/tutorial/create_news_items.html
@@ -161,7 +161,7 @@ public function set_news()
 	
 <pre>
 $route['news/create'] = 'news/create';
-$route['news/(:any)'] = 'news/view/$1';
+$route['news/view/(:any)'] = 'news/view/$1';
 $route['news'] = 'news';
 $route['(:any)'] = 'pages/view/$1';
 $route['default_controller'] = 'pages/view';
