fixed tutorial index.php link

--- a/tutorial/news_section.html
+++ b/tutorial/news_section.html
@@ -173,7 +173,7 @@ public function index()
     &lt;div id="main"&gt;
         &lt;?php echo $news_item['text'] ?&gt;
     &lt;/div&gt;
-    &lt;p&gt;&lt;a href="news/view/&lt;?php echo $news_item['slug'] ?&gt;"&gt;View article&lt;/a&gt;&lt;/p&gt;
+    &lt;p&gt;&lt;a href="view/&lt;?php echo $news_item['slug'] ?&gt;"&gt;View article&lt;/a&gt;&lt;/p&gt;
 
 &lt;?php endforeach ?&gt;
 </pre>
