revised some untranslate part and correct some mistake

--- a/general/drivers.html
+++ b/general/drivers.html
@@ -55,26 +55,26 @@
 <!-- START CONTENT -->
 <div id="content">
 
-<h1>使用 CodeIgniter Drivers</h1>
+<h1>使用 CodeIgniter 驅動器</h1>
 
 
-<p>Drivers are a special type of Library that has a parent class and any number of potential child classes.  Child classes have access to the parent class, but not their siblings.  Drivers provide an elegant syntax  in your <a href="controllers.html">controllers</a> for libraries that benefit from or require being broken down into discrete classes.</p>
+<p>驅動器是集合了一個父類別和複數個有關係子類別的特殊程式庫. 子類別會使用到父類別的一些功能, 但是他們不是父子關係(繼承). 驅動器在各種類別庫得益於或需要分拆成不同類別的情況下, 提供在 <a href="controllers.html">控制器</a> 中能夠以優雅的方式撰寫.</p>
 
-<p>Drivers are found in the <dfn>system/libraries</dfn> folder, in their own folder which is identically named to the parent library class.  Also inside that folder is a subfolder named <kbd>drivers</kbd>, which contains all of the possible child class files.</p>
+<p>驅動器位於 <dfn>system/libraries</dfn> 的檔案裡面, 它們會被歸類在與父類別相同名稱的目錄底下, 同時所有相關的子類別會存放在一個名為 <kbd>drivers</kbd> 附屬檔案中.</p>
 
-<p>To use a driver you will initialize it within a controller using the following initialization function:</p>
+<p>當你需要使用驅動器時, 你必須使用以下的函數來進行初式化的動作:</p>
 
 <code>$this->load->driver('<var>class name</var>'); </code>
 
-<p>Where <var>class name</var> is the name of the driver class you want to invoke.  For example, to load a driver named "Some Parent" you would do this:</p>
+<p>上面的 <var>class name</var> 是你要調用驅動器的名稱. 例如, 加載一個名為 "Some Parent" 驅動器的範例如下:</p>
 
 <code>$this->load->driver('<var>some_parent</var>');</code>
 
-<p>Methods of that class can then be invoked with:</p>
+<p>下面示範調用該類別的方法:</p>
 
 <code>$this->some_parent->some_method();</code>
 
-<p>The child classes, the drivers themselves, can then be called directly through the parent class, without initializing them:</p>
+<p>此外, 我們還能夠透過父類別呼叫隸屬於該驅動器的子類別, 而無須額外進行初始化:</p>
 
 <code>$this->some_parent->child_one->some_method();<br />
 $this->some_parent->child_two->another_method();</code>
