--- a/overview/at_a_glance.html
+++ b/overview/at_a_glance.html
@@ -122,7 +122,7 @@
 
 
 <h2>CodeIgniter 擁有完整詳盡的文件</h2>
-<p>程式設計師喜歡寫程式但是厭惡寫程式。我們也不例外，不過一但<strong>文件是像程式本身一樣重要</strong>，我們就有義務要撰寫文件。我們的程式碼相當的簡潔而且也說明得相當清楚。</p>
+<p>程式設計師喜歡寫程式但是厭惡寫文件。我們也不例外，不過一但<strong>文件是像程式本身一樣重要</strong>，我們就有義務要撰寫文件。我們的程式碼相當的簡潔而且也說明得相當清楚。</p>
 
 
 <h2>CodeIgniter 友善的使用者社群</h2>
