--- a/overview/features.html
+++ b/overview/features.html
@@ -58,25 +58,22 @@
 
 <h1>CodeIgniter 支援功能</h1>
 
-<p>Features in and of themselves are a very poor way to judge an application since they tell you nothing
-about the user experience，or how intuitively or intelligently it is designed.  Features
-don't reveal anything about the quality of the code，or the performance，or the attention to detail，or security practices.
-The only way to really judge an app is to try it and get to know the code. <a href="../installation/">Installing</a>
-CodeIgniter is child's play so we encourage you to do just that.  In the mean time here's a list of CodeIgniter's main features.</p>
+<p>僅僅觀看特色功能是無法得知使用者體驗好壞, 應用在設計上直覺跟聰明的地方. 同時你也不會知道程式碼的品質, 效能, 細膩度以及安全性. 
+判斷一個程式好壞的不二法門就是親身去體驗跟了解當中的乾坤. 因此我們鼓勵你去<a href="../installation/">安裝</a>它. 同時, 以下為CodeIgniter 一些主要特色.</p>
 
 <ul>
-<li>基本 模型(Model)-檢視(View)-控制器(Controller) 系統</li>
+<li>以 模型(Model)-檢視(View)-控制器(Controller) 為基礎的系統</li>
 <li>超輕量級</li>
-<li>Full Featured database classes with support for several platforms.</li>
+<li>功能全面且支援不同平台的資料庫類別(Database Library).</li>
 <li>Active Record 資料庫支援</li>
 <li>表單與資料驗證類別</li>
 <li>安全性與XSS過濾攻擊</li>
 <li>Session 管理</li>
 <li>電子郵件(E-mail)類別。支援附加檔案，存文字檔(text)或者是網頁檔(html)傳送，支援多重協定 (sendmail，SMTP，and Mail) 等更多。</li>
-<li>Image Manipulation Library (cropping，resizing，rotating，etc.).  Supports GD，ImageMagick，and NetPBM</li>
+<li>圖片操作類別 (Image Manipulation Library)(擷取，縮放，旋轉，等等.). 它同時支援 GD，ImageMagick，和 NetPBM</li>
 <li>檔案上傳類別</li>
 <li>FTP 類別</li>
-<li>Localization</li>
+<li>多種語言支援 (Localization)</li>
 <li>資料分頁類別</li>
 <li>資料加密</li>
 <li>Benchmarking</li>
@@ -85,14 +82,14 @@ CodeIgniter is child's play so we encourage you to do just that.  In the mean ti
 <li>Application Profiling</li>
 <li>日曆(Calendaring)類別</li>
 <li>User Agent 類別</li>
-<li>Zip 編碼類別</li>
+<li>Zip 壓縮類別</li>
 <li>樣板引擎類別</li>
 <li>Trackback Class</li>
-<li>XML-RPC Library</li>
-<li>Unit Testing Class</li>
-<li>Search-engine Friendly URLs</li>
-<li>Flexible URI Routing</li>
-<li>Support for Hooks，Class Extensions</li>
+<li>XML-RPC 類別</li>
+<li>單位測試類別</li>
+<li>易於搜尋引擎辨識的 URLs</li>
+<li>URI路由非常彈性化</li>
+<li>支援 Hooks跟類別擴充 (Class Extensions)</li>
 <li>大量的補助函數</li>
 </ul>
 
