--- a/tutorial/news_section.html
+++ b/tutorial/news_section.html
@@ -71,7 +71,8 @@
 
 <pre>
 &lt;?php
-class News_model extends CI_Model {
+class News_model extends CI_Model 
+{
 
 	public function __construct()
 	{
@@ -123,8 +124,8 @@ public function get_news($slug = FALSE)
 
 <pre>
 &lt;?php
-class News extends CI_Controller {
-
+class News extends CI_Controller 
+{
 	public function __construct()
 	{
 		parent::__construct();
