--- a/general/controllers.html
+++ b/general/controllers.html
@@ -64,7 +64,7 @@
 <li><a href="#what">什麼是控制器(Controller)呢?</a></li>
 <li><a href="#hello">我們的第一個程式:  Hello World!<a></li>
 <li><a href="#functions">函數(Functions)</a></li>
-<li><a href="#passinguri">傳遞 URL 段落到你的函數裡</a></li>
+<li><a href="#passinguri">傳遞 URI 段落到你的函數裡</a></li>
 <li><a href="#default">定義預設的控制器</a></li>
 <li><a href="#remapping">重新對映函數呼叫</a></li>
 <li><a href="#output">控制輸出資料</a></li>
@@ -238,7 +238,7 @@ class Products extends CI_Controller {<br />
 &nbsp;&nbsp;&nbsp;&nbsp;}<br />
 }</code>
 
-<p>Any extra segments after the method name are passed into <kbd>_remap()</kbd> as an optional second parameter. This array can be used in combination with PHP's <a href="http://php.net/call_user_func_array">call_user_func_array</a> to emulate CodeIgniter's default behavior.</p>
+<p>任何繼方法名稱後的區段會被當作陣列傳入 <kbd>_remap()</kbd> 做為第二個參數(非強制性). 此陣列與PHP原生名為 <a href="http://php.net/call_user_func_array">call_user_func_array</a> 的函數相互搭配可以模擬 CodeIgniter 預設行為.</p>
 
 <code>public function _remap($method, $params = array())<br />
 {<br />
@@ -266,20 +266,17 @@ public function _output($output)<br />
 &nbsp;&nbsp;&nbsp;&nbsp;echo $output;<br />
 }</code>
 
-<p class="important">Please note that your <dfn>_output()</dfn> function will receive the data in its finalized state.  Benchmark and memory usage data will be rendered,
-cache files written (if you have caching enabled), and headers will be sent (if you use that <a href="../libraries/output.html">feature</a>)
-before it is handed off to the _output() function.<br />
+<p class="important">請注意, 您的 <dfn>_output()</dfn> 函數所接收到的資料是已完成的狀態. 也就是說資料交給_output()函數時, 效能指標跟記憶體使用量已經完成計算,
+快取檔案已完成存檔 (快取啟用的情況下), 以及 headers 已經送出 (如果你有使用 <a href="../libraries/output.html">該功能</a>).<br />
 <br />
-To have your controller's output cached properly, its <dfn>_output()</dfn> method can use:<br />
+要確保你的控制器內輸出快取正常運作, 請在 <dfn>_output()</dfn> 的方法內加入:<br />
 
 <code>if ($this-&gt;output-&gt;cache_expiration &gt; 0)<br />
 {<br />
 &nbsp;&nbsp;&nbsp;&nbsp;$this-&gt;output-&gt;_write_cache($output);<br />
 }</code>
 
-If you are using this feature the page execution timer and memory usage stats might not be perfectly accurate
-since they will not take into acccount any further processing you do.  For an alternate way to control output <em>before</em> any of the final processing is done, please see
-the available methods in the <a href="../libraries/output.html">Output Class</a>.</p>
+如果你使用此功能, 頁面執行的時間跟記憶體的使用量會不完全正確, 因為任何的後續動作將不會被計算在內. 另外有個方法是在任何最終計算 <em>之前</em> 進行輸出, 詳情請參考 <a href="../libraries/output.html">Output Class</a>.</p>
 <!--
 <p class="important">請注意你的 <dfn>_output()</dfn> 函數得在它進入結束狀態時，才會收到資料。
 Benchmark 以及 memory 使用量資料會被建立出來，快取檔案被寫入(假設你有啟動快取功能)以及 headers 則會送出(假如你有使用這個<a href="../libraries/output.html">功能</a>)，而且是在另一方面把 _output() 函數關閉之前。  
