--- a/tutorial/create_news_items.html
+++ b/tutorial/create_news_items.html
@@ -150,7 +150,7 @@ public function set_news()
 <p>這個新方法用來新增資料到資料庫中。在第三行有個新的 <dfn>url_title()</dfn> 函數。這個函數 - 由 <a href="../helpers/url_helper.html">URL 輔助函數</a>提供 -
 會讀取你傳入的字串，使用破折號 (-) 來替換掉空白，並將所有字串轉為小寫。最後會產生一個很好的 slug ，非常適合用來建立 URI 。</p>
 	
-<p>我們繼續處理等會要存入的資料，將其放進 <var>$data</var> 陣列中。陣列中的每個元素都對應到我們建立的資料庫中的欄位。
+<p>我們繼續處理待會要存入的資料，將其放進 <var>$data</var> 陣列中。陣列中的每個元素都對應到我們建立的資料庫中的欄位。
 你可能注意到這邊有個新的函數叫做 <dfn>post()</dfn> ，它來自 <a href="../libraries/input.html">Input 程式庫</a>。
 這個方法用來確保資料已經被消毒，可以避免你受到令人討厭的攻擊。而這個程式庫預設就會被自動載入。最後，我們將 <var>$data</var> 存入資料庫當中。</p>
 
