--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -71,7 +71,7 @@
 <li>使用 &quot;Active Record&quot; 來做簡單的資料庫查詢</li>
 </ul>
 
-<p>整篇教學被分為數個部份進行，每一部份解釋 CodeIgniter 框架的一小部份功能。祥列如下：</p>
+<p>整篇教學被分為數個部份進行，每一部份解釋 CodeIgniter 框架的一小部份功能。詳列如下：</p>
 <ul>
 <li>簡介，也就是目前這一頁，給你一些概念讓你知道接下來會做些什麼。</li>
 <li><a href="static_pages.html">靜態頁面</a>，將會教你關於控制器（Controller），檢視（View）與路由的基礎知識。</li>
