--- a/source/_themes/sphinx_rtd_theme/search.html
+++ b/source/_themes/sphinx_rtd_theme/search.html
@@ -31,7 +31,7 @@
   {% if search_performed %}
     <h2>搜尋結果</h2>
     {% if not search_results %}
-      <p>您的搜尋沒有符合使用手冊當中的資料。請確定你沒有輸入錯別字，並且以精選擇了足夠的類別。</p>
+      <p>您的搜尋沒有符合使用手冊當中的資料。請確定您沒有輸入錯別字，並且已經選擇了足夠的類別。</p>
     {% endif %}
   {% endif %}
   <div id="search-results">
