--- a/source/_themes/sphinx_rtd_theme/footer.html
+++ b/source/_themes/sphinx_rtd_theme/footer.html
@@ -28,6 +28,9 @@
     </p>
   </div>
 
-  {% trans %}由 <a href="https://readthedocs.org">Read the Docs</a> 提供 基於 <a href="http://sphinx-doc.org/">Sphinx</a> 並使用 <a href="https://github.com/snide/sphinx_rtd_theme">佈景主題</a> {% endtrans %}.
+  {% trans %}
+	<p>由 <a href="https://readthedocs.org">Read the Docs</a> 提供 基於 <a href="http://sphinx-doc.org/">Sphinx</a> 並使用 <a href="https://github.com/snide/sphinx_rtd_theme">sphinx_rtd_theme</a> 主題</p>
+	<p><a href="https://github.com/CodeIgniter-TW/CodeIgniter-UserGuide" target="_blank">Github 正體中文 文件翻譯</a></p>
+{% endtrans %}
   
 </footer>
